--- a/TP1/tp1.ipynb
+++ b/TP1/tp1.ipynb
@@ -18,8 +18,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### f(x) = (x/coef)2 en el dominio [0 , 2^30 - 1]\n",
-    "donde coef = (2^30)-1\n",
+    "#### f(x) = (x/coef)2 en el dominio [0 , 2^(30 - 1)]\n",
+    "donde coef = 2^(30-1)\n",
     "teniendo en cuenta los siguientes datos:\n",
     "\n",
     "1– Probabilidad de Crossover = 0,75\n",
@@ -41,9 +41,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### En binario las posibles soluciones iran desde 00000000 hasta 11100101.\n",
-    "Luego el espacio solución estara formado por\n",
-    "cromosomas de longitud 8 y cada gen sera un dígito\n",
+    "#### El espacio solución estara formado por cromosomas de longitud 30\n",
+    " y cada gen sera un dígito\n",
     "binario 0 o 1"
    ]
   },
@@ -56,15 +55,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
     "PROB_CROSSOVER = 0.75\n",
     "PROB_MUTACION = 0.05\n",
-    "CICLOS = 20\n",
+    "CICLOS = 200\n",
     "CANTIDAD_POBLACION = 10\n",
-    "COEF = 1073741823"
+    "COEF = 1073741823 # 2^29"
    ]
   },
   {
@@ -76,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,12 +88,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Generando poblacón inicial aleatoria"
+    "### Generando población inicial aleatoria"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -105,13 +104,13 @@
        "      dtype=int64)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rng = np.random.default_rng(12345)\n",
+    "rng = np.random.default_rng(12345) # Random Number Generator\n",
     "# El 12345 es la semilla, poner sin semilla para q en cada ejecución genere nuevos aleatorios.\n",
     "poblacion_decimal = rng.integers(low=0, high=COEF, size=CANTIDAD_POBLACION)\n",
     "poblacion_decimal"
@@ -126,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +159,7 @@
        " '011001000001111111000001011001']"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -445,10 +444,13 @@
       "text/plain": [
        "array(['101011010001111100000110101010', '110010011110010011000100110110',\n",
        "       '110010011110010011000100110110', '101001001000011011101001000011',\n",
-       "       '111111010000101101111011000010'], dtype=object)"
+       "       '111111010000101101111011000010', '110011000010000000100100011111',\n",
+       "       '011001000001111111000001011001', '101011010001111100000110101010',\n",
+       "       '110011000010000000100100011111', '110011000010000000100100011111'],\n",
+       "      dtype=object)"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,11 +461,86 @@
     "    probabilidades = np.array(dataFrame['Fitness']) #Asigna probabilidad basada en el fitness\n",
     "    cromosomas = np.array(dataFrame['Binarios'])\n",
     "    np.random.seed(123) \n",
-    "    salida = np.random.choice(cromosomas, size=int(CANTIDAD_POBLACION/2), p=probabilidades)\n",
+    "    salida = np.random.choice(cromosomas, size=int(CANTIDAD_POBLACION), p=probabilidades)\n",
     "    return salida\n",
     "\n",
-    "ruleta(poblacion_decimal, poblacion_binarios)"
+    "cromosomasPadres = ruleta(poblacion_decimal, poblacion_binarios)\n",
+    "cromosomasPadres"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Crossover"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['101011011110010011000100110110',\n",
+       " '110010010001111100000110101010',\n",
+       " '110010011110010011000100110110',\n",
+       " '101001001000011011101001000011',\n",
+       " '111111000010000000100100011111',\n",
+       " '110011010000101101111011000010',\n",
+       " '011001000001111111000001011001',\n",
+       " '101011010001111100000110101010',\n",
+       " '110011000010000000100100011111',\n",
+       " '110011000010000000100100011111']"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def crossover(padres): #Pasar ndarray cromosomas padres\n",
+    "    hijos = []\n",
+    "    for i in range(0,10,2):\n",
+    "        opciones=[True, False]\n",
+    "        np.random.seed() \n",
+    "        prob_cross = np.array([PROB_CROSSOVER,(1-PROB_CROSSOVER)]) # Probabilidades de cada opción\n",
+    "        cross = np.random.choice(opciones, size=1, p=prob_cross)\n",
+    "        if cross[0]:\n",
+    "            posiciones = [x for x in range(0, 30)]\n",
+    "            probCorte = [1/30 for x in range(0, 30)]\n",
+    "            corte = np.random.choice(posiciones, size=1, p=probCorte) # Devuelve ndarray de 1 elemento\n",
+    "            posicionCorte = corte[0] \n",
+    "            primerTiraGenesPadre1 = padres[i][0:posicionCorte]\n",
+    "            segundaTiraGenesPadre1 = padres[i][posicionCorte:30]\n",
+    "            primerTiraGenesPadre2 = padres[i+1][0:posicionCorte]\n",
+    "            segundaTiraGenesPadre2 = padres[i+1][posicionCorte:30]\n",
+    "            hijos.append(primerTiraGenesPadre1 + segundaTiraGenesPadre2) # Hijo 1\n",
+    "            hijos.append(primerTiraGenesPadre2 + segundaTiraGenesPadre1) # Hijo 2\n",
+    "        else:\n",
+    "            hijos.append(padres[i])\n",
+    "            hijos.append(padres[i+1])\n",
+    "    return hijos\n",
+    "\n",
+    "cromosomasHijos = crossover(cromosomasPadres)\n",
+    "cromosomasHijos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Mutación"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
