Agregue método de selección torneo

--- a/TP1/tp1.ipynb
+++ b/TP1/tp1.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 384,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 385,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 386,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
        "      dtype=int64)"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 386,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,23 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def convertirPoblacionBin(pob_dec):\n",
-    "    pob_bin_cromosomas= np.zeros([10,30], int)\n",
-    "    pob_bin = []\n",
-    "    contador = 0\n",
-    "    for decimal in pob_dec:\n",
-    "        # convirtiendo cada número decimal en binario de 8 dígitos.\n",
-    "        pob_bin.append(format(decimal,'030b'))\n",
-    "    return pob_bin\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 401,
    "metadata": {},
    "outputs": [
     {
@@ -159,12 +143,20 @@
        " '011001000001111111000001011001']"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 401,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "def convertirPoblacionBin(pob_dec):\n",
+    "    pob_bin = []\n",
+    "    contador = 0\n",
+    "    for decimal in pob_dec:\n",
+    "        # convirtiendo cada número decimal en binario de 8 dígitos.\n",
+    "        pob_bin.append(format(decimal,'030b'))\n",
+    "    return pob_bin\n",
+    "\n",
     "poblacion_binarios= convertirPoblacionBin(poblacion_decimal)\n",
     "poblacion_binarios"
    ]
@@ -178,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 389,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 390,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 391,
    "metadata": {},
    "outputs": [
     {
@@ -436,36 +428,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 392,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['101011010001111100000110101010', '110010011110010011000100110110',\n",
-       "       '110010011110010011000100110110', '101001001000011011101001000011',\n",
-       "       '111111010000101101111011000010', '110011000010000000100100011111',\n",
-       "       '011001000001111111000001011001', '101011010001111100000110101010',\n",
-       "       '110011000010000000100100011111', '110011000010000000100100011111'],\n",
+       "array(['110011000010000000100100011111', '101001001000011011101001000011',\n",
+       "       '101100101111111111000001100110', '101001001000011011101001000011',\n",
+       "       '110011000010000000100100011111', '111111010000101101111011000010',\n",
+       "       '111111010000101101111011000010', '111111010000101101111011000010',\n",
+       "       '110010011110010011000100110110', '101100101111111111000001100110'],\n",
        "      dtype=object)"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 392,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def ruleta(pob_dec, pob_bin):\n",
-    "    dataFrame = generarDataFrame(pob_dec, pob_bin)\n",
+    "def ruleta(dataFrame): #pasar marco de datos\n",
     "    probabilidades = np.array(dataFrame['Fitness']) #Asigna probabilidad basada en el fitness\n",
     "    cromosomas = np.array(dataFrame['Binarios'])\n",
-    "    np.random.seed(123) \n",
+    "    np.random.seed() \n",
     "    salida = np.random.choice(cromosomas, size=int(CANTIDAD_POBLACION), p=probabilidades)\n",
     "    return salida\n",
     "\n",
-    "cromosomasPadres = ruleta(poblacion_decimal, poblacion_binarios)\n",
-    "cromosomasPadres"
+    "cromosomasPadresRuleta = ruleta(marcoDeDatos)\n",
+    "cromosomasPadresRuleta"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Método torneo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 393,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['111111010000101101111011000010',\n",
+       " '101011010001111100000110101010',\n",
+       " '111111010000101101111011000010',\n",
+       " '110010011110010011000100110110',\n",
+       " '111111010000101101111011000010',\n",
+       " '111111010000101101111011000010',\n",
+       " '111111010000101101111011000010',\n",
+       " '111111010000101101111011000010',\n",
+       " '101100101111111111000001100110',\n",
+       " '110011000010000000100100011111']"
+      ]
+     },
+     "execution_count": 393,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def torneo(dataFrame):\n",
+    "    salida = []\n",
+    "    fitness = np.array(dataFrame['Fitness'])\n",
+    "    cromosomas = np.array(dataFrame['Binarios'])\n",
+    "    for i in range(0,10):\n",
+    "        posiblesCantidades = [ x for x in range(1,11)]\n",
+    "        np.random.seed() \n",
+    "        cantidadMiembrosTorneo = np.random.choice(posiblesCantidades, size=1)\n",
+    "        miembrosTorneo = np.random.choice(fitness, size=cantidadMiembrosTorneo[0], replace=False) #Trabaja directamente con los fitness de los cromósomas\n",
+    "        ganador = np.amax(miembrosTorneo)\n",
+    "        indiceGanador = np.where(fitness == ganador) # retorna ndarray\n",
+    "        cromosomaGanador = cromosomas[indiceGanador[0][0]]\n",
+    "        salida.append(cromosomaGanador)\n",
+    "    return salida\n",
+    "\n",
+    "cromosomasPadresTorneo = torneo(marcoDeDatos)\n",
+    "cromosomasPadresTorneo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Test de prueba (podemos borrar desp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 394,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' fitness = np.array(marcoDeDatos[\\'Fitness\\'])\\ncromosomas = np.array(marcoDeDatos[\\'Binarios\\'])\\nposiblesCantidades = [ x for x in range(1,11)]\\ncantidadMiembrosTorneo = np.random.choice(posiblesCantidades, size=1)\\nmiembrosTorneo = np.random.choice(fitness, size=cantidadMiembrosTorneo[0], replace=False) #Trabaja directamente con los fitness de los cromósomas\\nganador = np.amax(miembrosTorneo)\\nindiceGanador = np.where(fitness == ganador)\\nprint(miembrosTorneo)\\nprint(\"Cantidad: \"+str(cantidadMiembrosTorneo[0]))\\nprint(\"Fitness ganador: \"+str(ganador))\\nprint(\"Indice: \"+str(indiceGanador[0][0]))\\nprint(\"Cromosoma: \"+str(cromosomas[indiceGanador[0][0]])) '"
+      ]
+     },
+     "execution_count": 394,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\" fitness = np.array(marcoDeDatos['Fitness'])\n",
+    "cromosomas = np.array(marcoDeDatos['Binarios'])\n",
+    "posiblesCantidades = [ x for x in range(1,11)]\n",
+    "cantidadMiembrosTorneo = np.random.choice(posiblesCantidades, size=1)\n",
+    "miembrosTorneo = np.random.choice(fitness, size=cantidadMiembrosTorneo[0], replace=False) #Trabaja directamente con los fitness de los cromósomas\n",
+    "ganador = np.amax(miembrosTorneo)\n",
+    "indiceGanador = np.where(fitness == ganador)\n",
+    "print(miembrosTorneo)\n",
+    "print(\"Cantidad: \"+str(cantidadMiembrosTorneo[0]))\n",
+    "print(\"Fitness ganador: \"+str(ganador))\n",
+    "print(\"Indice: \"+str(indiceGanador[0][0]))\n",
+    "print(\"Cromosoma: \"+str(cromosomas[indiceGanador[0][0]])) \"\"\""
    ]
   },
   {
@@ -477,29 +558,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 395,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['101011011110010011000100110110',\n",
-       " '110010010001111100000110101010',\n",
-       " '110010011110010011000100110110',\n",
-       " '101001001000011011101001000011',\n",
-       " '111111000010000000100100011111',\n",
-       " '110011010000101101111011000010',\n",
-       " '011001000001111111000001011001',\n",
-       " '101011010001111100000110101010',\n",
-       " '110011000010000000100100011111',\n",
-       " '110011000010000000100100011111']"
-      ]
-     },
-     "execution_count": 122,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def crossover(padres): #Pasar ndarray cromosomas padres\n",
     "    hijos = []\n",
@@ -522,10 +583,69 @@
     "        else:\n",
     "            hijos.append(padres[i])\n",
     "            hijos.append(padres[i+1])\n",
-    "    return hijos\n",
-    "\n",
-    "cromosomasHijos = crossover(cromosomasPadres)\n",
-    "cromosomasHijos"
+    "    return hijos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Crossover ruleta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 396,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['110011000010000000100100011111',\n",
+       " '101001001000011011101001000011',\n",
+       " '101100101111111111000001100011',\n",
+       " '101001001000011011101001000110',\n",
+       " '110011000010000000100100011111',\n",
+       " '111111010000101101111011000010',\n",
+       " '111111010000101101111011000010',\n",
+       " '111111010000101101111011000010',\n",
+       " '110010011110010011000100110110',\n",
+       " '101100101111111111000001100110']"
+      ]
+     },
+     "execution_count": 396,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cromosomasHijosRuleta = crossover(cromosomasPadresRuleta)\n",
+    "cromosomasHijosRuleta"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Crossover torneo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 399,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['111111010000111100000110101010', '101011010001101101111011000010', '111111010000101101111100110110', '110010011110010011000011000010', '111111010000101101111011000010', '111111010000101101111011000010', '111111010000101101111011000010', '111111010000101101111011000010', '101100101111000000100100011111', '110011000010111111000001100110']\n"
+     ]
+    }
+   ],
+   "source": [
+    "cromosomasHijosTorneo = crossover(cromosomasPadresTorneo)\n",
+    "print(cromosomasHijosTorneo)"
    ]
   },
   {
@@ -537,10 +657,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 398,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def mutacion(hijos):\n",
+    "    # TODO metodo\n",
+    "    return hijos "
+   ]
   }
  ],
  "metadata": {
