--- a/TP1/tp1.ipynb
+++ b/TP1/tp1.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
        "      dtype=int64)"
       ]
      },
-     "execution_count": 386,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 401,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
        " '011001000001111111000001011001']"
       ]
      },
-     "execution_count": 401,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -428,21 +428,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "array(['110011000010000000100100011111', '101001001000011011101001000011',\n",
-       "       '101100101111111111000001100110', '101001001000011011101001000011',\n",
-       "       '110011000010000000100100011111', '111111010000101101111011000010',\n",
-       "       '111111010000101101111011000010', '111111010000101101111011000010',\n",
-       "       '110010011110010011000100110110', '101100101111111111000001100110'],\n",
+       "       '110010011110010011000100110110', '101001001000011011101001000011',\n",
+       "       '111111010000101101111011000010', '101100101111111111000001100110',\n",
+       "       '101100101111111111000001100110', '111111010000101101111011000010',\n",
+       "       '011001000001111111000001011001', '110010011110010011000100110110'],\n",
        "      dtype=object)"
       ]
      },
-     "execution_count": 392,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,25 +468,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['111111010000101101111011000010',\n",
-       " '101011010001111100000110101010',\n",
+       "['101011010001111100000110101010',\n",
        " '111111010000101101111011000010',\n",
+       " '110011000010000000100100011111',\n",
+       " '010100010001011100010011000100',\n",
        " '110010011110010011000100110110',\n",
        " '111111010000101101111011000010',\n",
+       " '001110100011001010110001100011',\n",
        " '111111010000101101111011000010',\n",
        " '111111010000101101111011000010',\n",
-       " '111111010000101101111011000010',\n",
-       " '101100101111111111000001100110',\n",
-       " '110011000010000000100100011111']"
+       " '111111010000101101111011000010']"
       ]
      },
-     "execution_count": 393,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +529,7 @@
        "' fitness = np.array(marcoDeDatos[\\'Fitness\\'])\\ncromosomas = np.array(marcoDeDatos[\\'Binarios\\'])\\nposiblesCantidades = [ x for x in range(1,11)]\\ncantidadMiembrosTorneo = np.random.choice(posiblesCantidades, size=1)\\nmiembrosTorneo = np.random.choice(fitness, size=cantidadMiembrosTorneo[0], replace=False) #Trabaja directamente con los fitness de los cromósomas\\nganador = np.amax(miembrosTorneo)\\nindiceGanador = np.where(fitness == ganador)\\nprint(miembrosTorneo)\\nprint(\"Cantidad: \"+str(cantidadMiembrosTorneo[0]))\\nprint(\"Fitness ganador: \"+str(ganador))\\nprint(\"Indice: \"+str(indiceGanador[0][0]))\\nprint(\"Cromosoma: \"+str(cromosomas[indiceGanador[0][0]])) '"
       ]
      },
-     "execution_count": 394,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,6 +550,50 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Elitismo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['111111010000101101111011000010', '110011000010000000100100011111']"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Toma los 2 mejores de dataFrame y los devuelve en una lista\n",
+    "def elitismo(dataFrame, cantidad = 2):\n",
+    "    fitness = np.array(dataFrame['Fitness'])\n",
+    "    cromosomas = np.array(dataFrame['Binarios'])\n",
+    "    elites = []\n",
+    "    for i in range(0,cantidad):\n",
+    "        #busca cual es cromosoma con mayor fitness\n",
+    "        ganador = np.amax(fitness)\n",
+    "        indiceGanador = np.where(fitness == ganador)\n",
+    "        cromosomaGanador = cromosomas[indiceGanador[0][0]]\n",
+    "        #agrega el cromosoma a la lista de elites y lo elimina de la lista de cromosomas para buscar el siguiente\n",
+    "        elites.append(cromosomaGanador)\n",
+    "        fitness = np.delete(fitness, indiceGanador[0][0])\n",
+    "        cromosomas = np.delete(cromosomas, indiceGanador[0][0])\n",
+    "    return elites\n",
+    "elites = elitismo(marcoDeDatos)\n",
+    "elites"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -558,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,25 +639,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 396,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['110011000010000000100100011111',\n",
+       "['110011000010000000101001000011',\n",
+       " '101001001000011011100100011111',\n",
        " '101001001000011011101001000011',\n",
-       " '101100101111111111000001100011',\n",
-       " '101001001000011011101001000110',\n",
-       " '110011000010000000100100011111',\n",
-       " '111111010000101101111011000010',\n",
-       " '111111010000101101111011000010',\n",
-       " '111111010000101101111011000010',\n",
        " '110010011110010011000100110110',\n",
-       " '101100101111111111000001100110']"
+       " '111111010000101111000001100110',\n",
+       " '101100101111111101111011000010',\n",
+       " '101100101111111111000001100110',\n",
+       " '111111010000101101111011000010',\n",
+       " '011001000001111111000100110110',\n",
+       " '110010011110010011000001011001']"
       ]
      },
-     "execution_count": 396,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,14 +676,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 399,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['111111010000111100000110101010', '101011010001101101111011000010', '111111010000101101111100110110', '110010011110010011000011000010', '111111010000101101111011000010', '111111010000101101111011000010', '111111010000101101111011000010', '111111010000101101111011000010', '101100101111000000100100011111', '110011000010111111000001100110']\n"
+      "['101011010001111100000110101010', '111111010000101101111011000010', '110011000010000000100101000100', '010100010001011100010010011111', '110010011110010011000100110110', '111111010000101101111011000010', '001110100011001010110001100011', '111111010000101101111011000010', '111111010000101101111011000010', '111111010000101101111011000010']\n"
      ]
     }
    ],
@@ -657,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 398,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,7 +727,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4,
   "vscode": {
